--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc bot.ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,8 @@
     "axios": "^0.27.2",
     "discord-api-types": "^0.33.5",
     "discord.js": "^13.8.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "node-schedule": "^2.1.0",
+    "typescript": "^4.7.3"
   }
 }
