--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/rest": "^0.5.0",
-    "axios": "^0.27.2",
-    "discord-api-types": "^0.33.5",
-    "discord.js": "^13.8.0",
-    "dotenv": "^16.0.1",
+    "@discordjs/rest": "^1.3.0",
+    "axios": "^1.1.3",
+    "discord-api-types": "^0.37.17",
+    "discord.js": "^14.6.0",
+    "dotenv": "^16.0.3",
     "node-schedule": "^2.1.0",
-    "typescript": "^4.7.3"
+    "typescript": "^4.8.4",
+    "varint": "^6.0.0"
   }
 }
